--- a/triphippie/src/main/resources/application.properties
+++ b/triphippie/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=triphippie
+
+# Non permette proprietà ignote nei JSON
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jpa.defer-datasource-initialization=true
+
+# URL di connessione al database
+spring.datasource.url=jdbc:postgresql://localhost:5432/triphippie
+
+# Credenziali di connessione al database
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Driver JDBC per PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate (JPA) configurazioni
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
