--- a/triphippie/pom.xml
+++ b/triphippie/pom.xml
@@ -88,6 +88,11 @@
 			<artifactId>dotenv-java</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
