--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 
 triphippie/src/main/resources/*.env
 triphippie/src/main/resources/.env
+
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
+*.pdf
+
+## Intermediate documents:
+*.dvi
+*.xdv
+*-converted-to.*
+Documentazione/main.fdb_latexmk
+Documentazione/main.synctex.gz
