--- a/triphippie/Dockerfile
+++ b/triphippie/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:21
 WORKDIR /app
 COPY target/*.jar /app/triphippie.jar
+COPY target/.env /app/.env
 CMD ["java", "-jar", "/app/triphippie.jar"]
