--- a/triphippie/compose.yml
+++ b/triphippie/compose.yml
@@ -15,7 +15,7 @@ services:
     networks:
       - triphippie
     ports:
-      - 5433:5433
+      - 5432:5432
     volumes:
       - db:/var/lib/postgresql/data
 
@@ -27,12 +27,15 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/${POSTGRES_DB}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      IMAGE_PATH: /app/resources
     depends_on:
       - db
     networks:
       - triphippie
     ports:
       - "8765:8765"
+    volumes:
+      - ./resources:/app/resources
 
 volumes:
   db:
